force-app/main/default/objects/bofc__BOFCFieldsAnalyzerPicklistResult__c/bofc__BOFCFieldsAnalyzerPicklistResult__c.object-meta.xml
<CustomObject>
    <label>BOFCFieldsAnalyzerPicklistResult</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCFieldsAnalyzerPicklistResult</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>