force-app/main/default/objects/bofc__BOFCFieldsAnalyzerPicklistResult__c/fields/bofc__BOFCFieldsAnalyzerResult__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFCFieldsAnalyzerResult__c</fullName>
    <label>BOFCFieldsAnalyzerResult</label>
    <referenceTo>bofc__BOFCFieldsAnalyzerResult__c</referenceTo>
    <relationshipLabel>BOFCFieldsAnalyzerPicklistResult</relationshipLabel>
    <relationshipName>BOFCFieldsAnalyzerPicklistResult</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>