force-app/main/default/objects/bofc__BOFCFieldsAnalyzerPicklistResult__c/fields/bofc__Picklist_Value_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Picklist_Value_Name__c</fullName>
    <label>Picklist Value Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>