force-app/main/default/objects/bofc__BOFCFieldsAnalyzerPicklistResult__c/fields/bofc__Populated_On__c.field-meta.xml
<CustomField>
    <fullName>bofc__Populated_On__c</fullName>
    <label>Populated On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>